src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__path_with_tilde__double_quoted.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(r#\"ls \"~/\"\"#)?"
---
ls "~/"

0  2  `ls`  CALLABLE `ls`
2  3  ` `   meta.function-call.arguments
3  4  `"`   punctuation.definition.string.begin
4  6  `~/`  string.quoted.double
6  7  `"`   punctuation.definition.string.end
