src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__path_with_tilde__path_with_tilde_does_not_exist.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"ls test/~/\")?"
---
ls test/~/

0  2   `ls`      CALLABLE `ls`
2  8   ` test/`  meta.function-call.arguments
8  9   `~`       variable.language.tilde
9  10  `/`       meta.function-call.arguments
