src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__path_with_tilde__simple_slash.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"ls ~/\")?"
---
ls ~/

0  2  `ls`  CALLABLE `ls`
2  3  ` `   meta.function-call.arguments
3  4  `~`   variable.language.tilde + dynamic.path.directory.complete
4  5  `/`   meta.function-call.arguments + dynamic.path.directory.complete
