src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__path_with_tilde__single_quoted.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"ls '~/'\")?"
---
ls '~/'

0  2  `ls`  CALLABLE `ls`
2  3  ` `   meta.function-call.arguments
3  4  `'`   punctuation.definition.string.begin
4  6  `~/`  string.quoted.single
6  7  `'`   punctuation.definition.string.end
